--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -160,7 +160,8 @@ header ul a strong {
 }
 
 section {
-  width:500px;
+/*  width:500px;*/
+  width:550px;
   float:right;
   padding-bottom:50px;
 }
