--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -3,7 +3,7 @@
 body {
   padding:50px;
   font:14px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color:#777;
+  color:#444;
   font-weight:300;
   background-color:#F7F7F7;
 }
@@ -34,14 +34,14 @@ h3, h4, h5, h6 {
 }
 
 a {
-  color:#39c;
+  color:#2879A2;
   font-weight:400;
   text-decoration:none;
 }
 
 a small {
   font-size:11px;
-  color:#777;
+  color:#444;
   margin-top:-0.6em;
   display:block;
 }
